<resources>
    <string name="app_name">Job Swipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technology_it"><![CDATA[Technology & IT]]></string>
    <string name="healthcare_medicine"><![CDATA[Healthcare & Medicine]]></string>
    <string name="healthcare">Healthcare</string>
    <string name="engineering">Engineering</string>
    <string name="business_finance"><![CDATA[Business & Finance]]></string>
    <string name="education">Education</string>
    <string name="real_estate_construction"><![CDATA[Real Estate & Construction]]></string>
    <string name="media">Media</string>
    <string name="law_legal"><![CDATA[Law & Legal]]></string>
    <string name="science_research"><![CDATA[Science & Research]]></string>
    <string name="hospitality_tourism"><![CDATA[Hospitality & Tourism]]></string>
    <string name="arts_design"><![CDATA[Arts & Design]]></string>
    <string name="job_desc">
        <b>Responsibilities:</b>
        \nDeveloper for Core Banking (Sliverlake Loans and Credit)
        \nTo work on:\n- DevOps\n- ALDON (automation of software deployment on AS400)
        \n- Silverlake
        \n- Loans (systems that support lending products across the Bank for both the Retail and Wholesale business)
        \n- Limits (systems that manage counterparty credit limits at a relationship level both regionally and globally)
        \n- Collaterals (systems that support the lodgement, revaluation and release process for collaterals and related documents being held at Bank for secured loans)
        \n\n<b>Mandatory Skills Description:</b>
        \n• 6-9 years of experience
        \n• Cobol
        \n• Have done project based implementation in SDLC
        \n• Team management
        \n• Knowledge on Loans, Limits, Collateral, Provision, NPL
    </string>

    <string-array name="malaysia_states">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Melaka</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Putrajaya</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>

    <string-array name="job_levels">
        <item>Internship</item>
        <item>Junior Level</item>
        <item>Mid Level</item>
        <item>Senior Level</item>
        <item>Manager</item>
        <item>Executive</item>
        <item>Director</item>
    </string-array>

    <string-array name="salary_ranges">
        <item>&lt; 1000</item>
        <item>1000 - 3000</item>
        <item>3000 - 5000</item>
        <item>5000 - 7000</item>
        <item>7000 - 10000</item>
        <item>&gt; 10000</item>
    </string-array>


    <!-- Questions -->
    <string name="question1">How do I create an account?</string>
    <string name="question2">How do I reset my password?</string>
    <string name="question3">How do I update my profile information?</string>
    <string name="question4">How do I search for jobs?</string>
    <string name="question5">How do I apply for a job?</string>
    <string name="question6">Can I save jobs to apply later?</string>
    <string name="question7">How do I contact support?</string>
    <string name="question8">What is the difference between user and admin roles?</string>
    <string name="question9">How do I use the messaging feature?</string>
    <string name="question10">How do I set location preferences for job searches?</string>
    <string name="question11">What is the process for reporting an issue?</string>
    <string name="question12">How can I view my job application status?</string>

    <!-- Details -->
    <string name="detail1">To create an account, go to the sign-up page and enter your details</string>
    <string name="detail2">To reset your password, go to the login page and select “Forgot Password”</string>
    <string name="detail3">You can update your profile information in the Profile section under Settings</string>
    <string name="detail4">Use the search bar on the Jobs page to look for positions by keyword or location</string>
    <string name="detail5">Once you find a job you are interested in, click on Apply to start the application</string>
    <string name="detail6">Yes, you can save jobs by clicking the bookmark icon. View saved jobs in your profile</string>
    <string name="detail7">To contact support, go to the Help section and choose Contact Us to send a message</string>
    <string name="detail8">User role is for job seekers; Admin role has additional permissions for managing job posts</string>
    <string name="detail9">In the Community section, use the message icon to chat with companies and users...</string>
    <string name="detail10">Set location preferences in the Filter section on the Jobs page for customized results</string>
    <string name="detail11">To report an issue, go to the Report section, fill in the form, and submit it</string>
    <string name="detail12">You can check your application status under Applications in your profile section</string>
</resources>