<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.Fragments.PreferenceIndustry">

    <TextView
        android:id="@+id/selectheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingHorizontal="5dp"
        android:text="Select Up To 3 Interest"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectdetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Tell us more about which industry you are passionate for"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selectheader"
        app:layout_constraintStart_toStartOf="@+id/selectheader"
        app:layout_constraintTop_toBottomOf="@+id/selectheader" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/chipsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectdetails">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/technology_it"
            android:layout_marginEnd="5dp"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/healthcare_medicine"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:layout_marginEnd="5dp"
            android:text="@string/hospitality_tourism"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:layout_marginEnd="5dp"
            android:text="@string/arts_design"
            app:chipBackgroundColor="@drawable/chip_selector" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/healthcare"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/engineering"
            android:layout_marginEnd="5dp"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/business_finance"
            android:layout_marginEnd="5dp"
            app:chipBackgroundColor="@drawable/chip_selector" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/education"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:checkable="true"
            android:text="@string/real_estate_construction"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/media"
            android:layout_marginEnd="5dp"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/law_legal"
            app:chipBackgroundColor="@drawable/chip_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/science_research"
            app:chipBackgroundColor="@drawable/chip_selector" />


    </com.google.android.flexbox.FlexboxLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipsLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittextbg"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="15dp"
            android:text="Next"
            android:textColor="?attr/backgroundColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skipButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittextbg"
            android:padding="15dp"
            android:text="Skip"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>